Finalização do cap 4 (vetores e matrizes)

--- a/algebra-linear.ipynb
+++ b/algebra-linear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae97f5b0",
+   "id": "3c797dea",
    "metadata": {},
    "source": [
     "## Vetores \n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "982989b1",
+   "id": "3e6fc0a6",
    "metadata": {},
    "source": [
     "Exemplo 1:\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c5f8aa5",
+   "id": "2f7a47f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9ea2fe49",
+   "id": "e5170150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a695da0",
+   "id": "e9ee8408",
    "metadata": {},
    "source": [
     "Se eu tenho dois vetores v e w, caso os vetores tenham o mesmo tamanho teremos um vetor que o primeiro elemento será v[0] + w[0], o segundo será v[1] e w[1]... Logo sabemos que não podemos somar vetores com tamanhos diferentes."
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32cf61c",
+   "id": "b71698f6",
    "metadata": {},
    "source": [
     "Conseguimos realizar operação utilizando o zip para compactar os vetores e aplicar em uma list comprehension para adicionar os elemento."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "761d77e6",
+   "id": "0556c407",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "9ed0f241",
+   "id": "ef6dd79a",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa30931",
+   "id": "a7015fdd",
    "metadata": {},
    "source": [
     "As vezes será necessário somar uma lista de vetores por componentes. Onde será necessário criar um vetor onde o primeiro elemento será a soma de todos os primeiros elementos e assim sucessivamente."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "dc5bfaf6",
+   "id": "7207b362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a788dd9d",
+   "id": "e4429873",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ac4bcd",
+   "id": "ab1e53f0",
    "metadata": {},
    "source": [
     "Podemos também multiplicar os vetores por um escalar, a operação é simples, basta multiplicar cada elemento do vetor pelo escalar."
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "956912d3",
+   "id": "7790c399",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ac063b5",
+   "id": "067a6955",
    "metadata": {},
    "source": [
     "Podemos também fazer a média dos valores da lista de vetores."
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b305d9e1",
+   "id": "e7e428f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "97b4a0c5",
+   "id": "496f1bb6",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cef6ab1a",
+   "id": "3c045bc7",
    "metadata": {},
    "source": [
     "O produto escalar é uma operação matemática que combina dois vetores para produzir um único valor. Ele é usado para medir a relação entre dois vetores e é definido como a soma dos produtos dos elementos correspondentes dos vetores. O resultado do produto escalar é um número real.\n"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8dab4ed6",
+   "id": "8dbdfdf9",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ea8e293a",
+   "id": "7fe30069",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce234ee",
+   "id": "13016769",
    "metadata": {},
    "source": [
     "Podemos utilizar a soma dos quadrados para pegar a magnitude do vetor, ou seja, pegar seu comprimento. "
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e8d96324",
+   "id": "6e21f57a",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae4839f",
+   "id": "2fe91086",
    "metadata": {},
    "source": [
     "Definindo o comprimento do vetor, conseguimos pegar a distância entre os dois vetores."
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "81b3974c",
+   "id": "bdf7d8d8",
    "metadata": {
     "scrolled": true
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "4559c4f4",
+   "id": "28825a97",
    "metadata": {},
    "outputs": [
     {
@@ -386,6 +386,276 @@
     "def distance(v: Vector, w: Vector) -> float:\n",
     "    return magnitude(subtract(v, w))\n",
     "magnitude([1,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "945cb872",
+   "metadata": {},
+   "source": [
+    "## Matrizes\n",
+    "\n",
+    "De forma simples podemos definir uma matriz como uma \"tabela\" de números organizadas em linhas e colunas. Cada número de uma matriz é chamado de elemento.\n",
+    "\n",
+    "Representamos matrizes como listas de listas, onde as listas internas terão o mesmo tamanho e vão representar as linhas da nossa matriz. Se temos por exemplo uma matriz A, então A[i][j] é o elemento na linha i e coluna j.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "e776bc24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ex1\n",
+    "Matrix = List[List[float]]\n",
+    "\n",
+    "A = [[1,2,3],  #Temos uma matriz 2x3, ou seja, duas linhas e 3 colunas\n",
+    "    [4,5,6]]\n",
+    "\n",
+    "B = [[7,8], #Nesse exemplo temos uma matriz 3x2, ou seja 3 linhas e 2 colunas\n",
+    "     [9,10],\n",
+    "     [11,12]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51235670",
+   "metadata": {},
+   "source": [
+    "Podemos usar o tamanho da lista para determinar o número de colunas e o número de elementos em cada sublista para determinar o número de linhas da matriz."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "d5e56664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple\n",
+    "def shape(A: Matrix) -> Tuple[int,int]:\n",
+    "    \"\"\"Retorna número de linhas e colunas\"\"\"\n",
+    "    n_row = len(A)\n",
+    "    n_cols = len(A[0]) if A else 0 #fazemos uma verificação se a matriz é vazia\n",
+    "    return n_row, n_cols\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "5f39723e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shape([[7,8],\n",
+    "     [9,10],\n",
+    "     [11,12]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "64d9527f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_row(A: Matrix,i:int) -> Vector:\n",
+    "    return A[i] #Retorna linha i da A como um vetor\n",
+    "\n",
+    "def get_column(A: Matrix, j:int) -> Vector:\n",
+    "    return [A_i[j] #Vai retornar cada elemento j da linha para cada linha\n",
+    "            for A_i in A]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "6386c76c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb404240",
+   "metadata": {},
+   "source": [
+    "A classe Callable é usada para anotar tipos de dados de objetos que são chamáveis, ou seja, que podem ser chamados como funções. É uma forma de indicar que um objeto pode ser invocado e tratado como uma função, mesmo que não seja uma função em si.\n",
+    "\n",
+    "Logo, podemos criar matrizes indicando a forma dos seus elementos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "5c84e51a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_matrix(num_rows: int,\n",
+    "                num_cols: int,\n",
+    "                entry_fn: Callable[[int, int], float]) -> Matrix:\n",
+    "    return [[entry_fn(i, j)\n",
+    "             for j in range(num_cols)] \n",
+    "            for i in range(num_rows)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "733161dd",
+   "metadata": {},
+   "source": [
+    "A função abaixo vai criar uma função identidade "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "0097288e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1.0, 0.0, 0.0, 0.0, 0.0, 0.0],\n",
+       " [0.0, 1.0, 0.0, 0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 1.0, 0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0, 1.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0, 0.0, 1.0, 0.0],\n",
+       " [0.0, 0.0, 0.0, 0.0, 0.0, 1.0]]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def identity_matrix(n: int) -> Matrix:\n",
+    "    return make_matrix(n, n, lambda i, j: 1.0 if i == j else 0.0)\n",
+    "\n",
+    "\n",
+    "identity_matrix(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b40941",
+   "metadata": {},
+   "source": [
+    "A representação da matriz de adjacência para as amizades é baseada em uma matriz quadrada, onde as linhas e colunas representam as pessoas. Cada elemento da matriz indica se duas pessoas são amigas ou não."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "f55b3f62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friendships = [(0,1), (0,2), (1,2), (1,3), (2,3), (3,4), (4,5), (5,6), (5,7), (6,8), (7,8), (8,9)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1db090e1",
+   "metadata": {},
+   "source": [
+    "Temos as seguintes amizades:\n",
+    "\n",
+    "- A pessoa 0 é amiga da pessoa 1 e da pessoa 2.\n",
+    "- A pessoa 1 é amiga da pessoa 0, pessoa 2 e pessoa 3.\n",
+    "- A pessoa 2 é amiga da pessoa 0, pessoa 1 e pessoa 3.\n",
+    "- A pessoa 3 é amiga da pessoa 1, pessoa 2 e pessoa 4.\n",
+    "- A pessoa 4 é amiga da pessoa 3 e pessoa 5.\n",
+    "- A pessoa 5 é amiga da pessoa 4, pessoa 6 e pessoa 7.\n",
+    "- A pessoa 6 é amiga da pessoa 5 e pessoa 8.\n",
+    "- A pessoa 7 é amiga da pessoa 5 e pessoa 8.\n",
+    "- A pessoa 8 é amiga da pessoa 6, pessoa 7 e pessoa 9.\n",
+    "- A pessoa 9 é amiga da pessoa 8."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfbf4cfb",
+   "metadata": {},
+   "source": [
+    "Para criar a matriz de adjacência, vamos percorrer todas as amizades e marcar os elementos correspondentes da matriz com 1, indicando a amizade entre as pessoas. Os elementos não mencionados serão preenchidos com 0, indicando a ausência de amizade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "050a44e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "friendships = [(0,1), (0,2), (1,2), (1,3), (2,3), (3,4), (4,5), (5,6), (5,7), (6,8), (7,8), (8,9)]\n",
+    "num_people = max(max(pair) for pair in friendships) + 1  # Obtem o número total de pessoas\n",
+    "print(num_people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "c4afc7a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 1, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 1, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 0, 1, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 0, 1, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 1, 1, 0, 1]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "friendships = [(0,1), (0,2), (1,2), (1,3), (2,3), (3,4), (4,5), (5,6), (5,7), (6,8), (7,8), (8,9)]\n",
+    "num_people = max(max(pair) for pair in friendships) + 1  # Obtem o número total de pessoas\n",
+    "adj_matrix = [[0] * num_people for _ in range(num_people)]  # Inicializa a matriz com zeros\n",
+    "\n",
+    "# Preenche a matriz com as amizades\n",
+    "for friend_a, friend_b in friendships:\n",
+    "    adj_matrix[friend_a][friend_b] = 1\n",
+    "    adj_matrix[friend_b][friend_a] = 1\n",
+    "\n",
+    "# Imprime a matriz\n",
+    "for row in adj_matrix:\n",
+    "    print(row)\n"
    ]
   }
  ],
