--- a/descriptive-statistics.ipynb
+++ b/descriptive-statistics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400f94ae",
+   "id": "1ef05764",
    "metadata": {},
    "source": [
     "### Medidas de Posição"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ecd35a9",
+   "id": "dbe60a1e",
    "metadata": {},
    "source": [
     "- Moda: Valor mais frequente em um conjunto de dados;\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58de8d2e",
+   "id": "9ec0bb95",
    "metadata": {},
    "source": [
     " Para calcular a **moda** de uma variável precisamos apenas da frequência dessa variável, já a **mediana** é necessário ordenar as realizações. A **média** só pode ser calculada para variáveis quantitativas.\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6425909c",
+   "id": "926b97f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa54298",
+   "id": "1002985f",
    "metadata": {},
    "source": [
     "### Medidas de Dispersão"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "199932b3",
+   "id": "829ff583",
    "metadata": {},
    "source": [
     "Uma única medida de posição pode não fornecer informações suficientes sobre a variabilidade de um conjunto de observações. O exemplo abaixo ilustra essa situação:"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fbf92021",
+   "id": "9be919ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4f2e10f1",
+   "id": "f6a836a7",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "462d880e",
+   "id": "ac3dce72",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5564607",
+   "id": "8fd3fb26",
    "metadata": {},
    "source": [
     "Ao analisar os conjuntos de dados x, y, z, w e v, podemos observar que a a média é igual a 5 em todos os casos, isso não fornece informações sobre suas diferentes variabilidades. É importante considerar medidas que resumam a variabilidade de um conjunto de observações, permitindo-nos comparar conjuntos de valores diferentes de acordo com critérios estabelecidos. Duas medidas amplamente utilizadas para esse propósito são o desvio médio e a variância."
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d798b5ea",
+   "id": "b83e9d21",
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26be6bad",
+   "id": "9fcac162",
    "metadata": {},
    "source": [
     "No exemplo dado para o grupo A, os desvios em relação à média são -2, -1, 0, 1, 2. É importante notar que a soma desses desvios é sempre igual a zero para qualquer conjunto de dados. Isso ocorre porque os valores acima da média são compensados pelos valores abaixo da média, resultando em um cancelamento e uma soma total igual a zero.\n",
@@ -282,8 +282,10 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3d77d3d5",
-   "metadata": {},
+   "id": "487a78b5",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -304,6 +306,72 @@
    "source": [
     "df_notas.std()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff8fc878",
+   "metadata": {},
+   "source": [
+    "Portanto, podemos concluir que, com base nos desvios padrão, as colunas 'y', 'w' e 'v' possuem uma maior dispersão em relação à média, enquanto as colunas 'x' e 'z' têm uma dispersão menor ou nula (todos os valores são iguais)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f90b28c",
+   "metadata": {},
+   "source": [
+    "### Quantis Empíricos "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a321348",
+   "metadata": {},
+   "source": [
+    "A média e o desvio padrão podem não ser adequados para representar um conjunto de dados, uma vez que:\n",
+    "- São afetados por valores extremos;\n",
+    "- Com apenas esse dois valores não conseguimos ter ideia da simetria ou assimetria do conjunto de dados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42fd938b",
+   "metadata": {},
+   "source": [
+    "Os quantis são medidas que nos permitem dividir os dados em partes iguais com base em uma proporção específica. Por exemplo, se falamos do quantil de ordem 0.5 (ou 50%), isso significa que metade dos dados está abaixo desse valor e metade está acima.\n",
+    "\n",
+    "Podemos usar quantis para dividir os dados em diferentes proporções. Por exemplo, o quantil de ordem 0.25 (ou 25%) nos dá um valor tal que 25% dos dados estão abaixo dele e 75% estão acima. Da mesma forma, o quantil de ordem 0.75 (ou 75%) nos dá um valor em que 75% dos dados estão abaixo e 25% estão acima.\n",
+    "\n",
+    "Em resumo, os quantis nos ajudam a entender como os dados estão distribuídos e como eles se comparam em relação a diferentes proporções. Eles nos permitem identificar valores que se encontram em diferentes partes da distribuição."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "119fa57e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 8, 10, 11, 12, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [15, 5, 3, 8, 10, 2, 7, 11, 12]\n",
+    "x.sort()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45d6761",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
