Resumo até pág 57

--- a/descriptive-statistics.ipynb
+++ b/descriptive-statistics.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "926b97f7",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "a10bd387",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "9be919ab",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "f6a836a7",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "4  7  9  5  NaN  6"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "ac3dce72",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "b83e9d21",
    "metadata": {
     "scrolled": true
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "119fa57e",
    "metadata": {},
    "outputs": [
@@ -360,18 +360,133 @@
     }
    ],
    "source": [
-    "x = [15, 5, 3, 8, 10, 2, 7, 11, 12]\n",
-    "x.sort()\n",
-    "print(x)"
+    "lista1 = [15, 5, 3, 8, 10, 2, 7, 11, 12]\n",
+    "lista1.sort()\n",
+    "print(lista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b45d6761",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeiro quartil:5.0 \n",
+      "Segundo quartil 8.0 \n",
+      "Teceiro Quartil: 11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "q1 = np.percentile(lista1,25)\n",
+    "q2 = np.percentile(lista1,50)\n",
+    "q3 = np.percentile(lista1,75)\n",
+    "\n",
+    "print(f\"Primeiro quartil:{q1} \\nSegundo quartil {q2} \\nTeceiro Quartil: {q3}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3779519b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "media_lista1 = round(np.mean(lista1),2)\n",
+    "print(media_lista1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5595dde",
+   "metadata": {},
+   "source": [
+    "Podemos observar que a média é muito próxima a mediana."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "084f665a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 8, 10, 11, 12, 15, 67]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Nesse exemplo vamos acrescentar o valor 67 no conjunto de dados\n",
+    "lista2 = [15, 5, 3, 8, 10, 2, 7, 11, 12,67]\n",
+    "lista2.sort()\n",
+    "print(lista2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "673d63ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mediana:9.0 \n",
+      "Media:14.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mediana_lista2 = np.percentile(lista2,50)\n",
+    "media_lista2 = round(np.mean(lista2),2)\n",
+    "print(f\"Mediana:{mediana_lista2} \\nMedia:{media_lista2}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b965e25",
+   "metadata": {},
+   "source": [
+    "A mediana está relativamente próxima à mediana dos valores originais, porém distante da média dos valores atuais. Com isso, podemos observar claramente que a mediana não é muito afetada pelo valor discrepante que foi adicionado, **67**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8be34cd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeiro Quartil:5.5 \n",
+      "Terceiro Quartil:11.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista2_q1 = np.percentile(lista2,25)\n",
+    "lista2_q3 = np.percentile(lista2,75)\n",
+    "print(f\"Primeiro Quartil:{lista2_q1} \\nTerceiro Quartil:{lista2_q3}\")"
+   ]
   }
  ],
  "metadata": {
