Resumo até página 54

--- a/descriptive-statistics.ipynb
+++ b/descriptive-statistics.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "926b97f7",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "a10bd387",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "9be919ab",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "f6a836a7",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "4  7  9  5  NaN  6"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "ac3dce72",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "b83e9d21",
    "metadata": {
     "scrolled": true
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "487a78b5",
    "metadata": {
     "scrolled": true
@@ -298,7 +298,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "119fa57e",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "b45d6761",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "3779519b",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "084f665a",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "673d63ce",
    "metadata": {},
    "outputs": [
@@ -469,9 +469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "8be34cd6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -486,6 +488,75 @@
     "lista2_q1 = np.percentile(lista2,25)\n",
     "lista2_q3 = np.percentile(lista2,75)\n",
     "print(f\"Primeiro Quartil:{lista2_q1} \\nTerceiro Quartil:{lista2_q3}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e315d506",
+   "metadata": {},
+   "source": [
+    "Uma boa medida de dispersão é o intervalo interquaril, ou seja:\n",
+    "\n",
+    "    dq = q3 - q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "30cd99cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.25"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1 = lista2_q3 - lista2_q1\n",
+    "d1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1de56d0",
+   "metadata": {},
+   "source": [
+    "Uma distribuição simétrica ou aproximadamente simétrica é aquela em que os dados estão igualmente distribuídos em relação à sua mediana (q2). Nesse caso, as distâncias entre os quartis (q1, q2, q3) são iguais ou aproximadamente iguais."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5907cd8",
+   "metadata": {},
+   "source": [
+    "Sabendo que X(n) é representa o valor máximo de uma distribuição e X(1) um valor de mínimo, para ter ums distribuição simétrica, devemos ter:\n",
+    "- q2 - x(1) ~= x(n) - q2 \n",
+    "- q2 - q1   ~= q3 - q2;\n",
+    "- q1 - x(1) ~= x(n) - q3;\n",
+    "- distâncias entre mediana e q1, q3 menores do que distâncias entre os extremos e q1, q3.\n",
+    "\n",
+    " q2 - x(1) é chamada dispersão inferior e x(n) - q2 é a dispersão superior.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e2414b4",
+   "metadata": {},
+   "source": [
+    "Com base nas medidas de quartis (q1, q3) e no intervalo interquartil (dq), podemos calcular os limites superior e inferior para identificar possíveis outliers. Esses limites são calculados da seguinte forma:\n",
+    "\n",
+    "- Limite Superior (LS) = q3 + (1,5 * dq)\n",
+    "- Limite Inferior (LI) = q1 - (1,5 * dq)\n",
+    "\n",
+    "Esses limites definem uma faixa em torno dos quartis que é usada para identificar valores que estão significativamente acima (no caso do LS) ou abaixo (no caso do LI) da distribuição geral dos dados.\n",
+    "\n",
+    "Os valores que estão acima do limite superior ou abaixo do limite inferior são considerados pontos exteriores, também conhecidos como outliers. Esses pontos podem ser indicativos de valores atípicos ou discrepantes em relação ao restante dos dados e podem requerer uma análise mais aprofundada para determinar se são resultados corretos ou erros."
    ]
   }
  ],
